--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,15 +7,21 @@ pool:
 variables:
   phpVersion: 7.2
 
-steps:
-- script: |
-    sudo update-alternatives --set php /usr/bin/php$(phpVersion)
-    sudo update-alternatives --set phar /usr/bin/phar$(phpVersion)
-    sudo update-alternatives --set phpdbg /usr/bin/phpdbg$(phpVersion)
-    sudo update-alternatives --set php-cgi /usr/bin/php-cgi$(phpVersion)
-    sudo update-alternatives --set phar.phar /usr/bin/phar.phar$(phpVersion)
-    php -version
-  displayName: 'Use PHP version $(phpVersion)'
-
-- script: composer install --no-interaction --prefer-dist
-  displayName: 'composer install'
+stages:
+- stage: static_analisys
+  jobs:
+    - job: 
+      steps:
+        - task: SonarCloudPrepare@1
+          inputs:
+            SonarCloud: 'sonacloud'
+            organization: 'salomerosa'
+            scannerMode: 'CLI'
+            configMode: 'manual'
+            cliProjectKey: 'lightiblog'
+            cliProjectName: 'lightiblog'
+            cliSources: '.'
+        - task: SonarCloudAnalyze@1
+        - task: SonarCloudPublish@1
+          inputs:
+            pollingTimeoutSec: '300'
